@@ -3,7 +3,6 @@ package com.descope.utils;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.Arrays;
 import java.util.Collections;
@@ -55,12 +54,13 @@ public class UriUtils {
             Collectors.mapping(Map.Entry::getValue, Collectors.toList())));
   }
 
+  @SneakyThrows
   public static SimpleImmutableEntry<String, String> splitQueryParameter(String it) {
     final int idx = it.indexOf("=");
     final String key = idx > 0 ? it.substring(0, idx) : it;
     final String value = idx > 0 && it.length() > idx + 1 ? it.substring(idx + 1) : null;
     return new SimpleImmutableEntry<>(
-        URLDecoder.decode(key, StandardCharsets.UTF_8),
-        URLDecoder.decode(value, StandardCharsets.UTF_8));
+        URLDecoder.decode(key, "UTF-8"),
+        URLDecoder.decode(value, "UTF-8"));
   }
 }
