@@ -11,14 +11,21 @@ import static org.mockito.Mockito.mockStatic;
 import com.descope.exception.RateLimitExceededException;
 import com.descope.exception.ServerCommonException;
 import com.descope.model.audit.AuditSearchRequest;
+import com.descope.model.audit.AuditSearchResponse;
+import com.descope.model.client.Client;
+import com.descope.model.mgmt.AccessKeyResponse;
+import com.descope.model.mgmt.ManagementParams;
+import com.descope.model.mgmt.ManagementServices;
 import com.descope.proxy.ApiProxy;
 import com.descope.proxy.impl.ApiProxyBuilder;
 import com.descope.sdk.TestUtils;
 import com.descope.sdk.mgmt.AccessKeyService;
 import com.descope.sdk.mgmt.AuditService;
+import com.descope.sdk.mgmt.impl.AuditServiceImpl.ActualAuditRecord;
+import com.descope.sdk.mgmt.impl.AuditServiceImpl.ActualAuditSearchResponse;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.List;
+import java.util.Arrays;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -32,27 +39,28 @@ public class AuditServiceImplTest {
 
   @BeforeEach
   void setUp() {
-    var authParams = TestUtils.getManagementParams();
-    var client = TestUtils.getClient();
-    var mgmtServices = ManagementServiceBuilder.buildServices(client, authParams);
+    ManagementParams authParams = TestUtils.getManagementParams();
+    Client client = TestUtils.getClient();
+    ManagementServices mgmtServices = ManagementServiceBuilder.buildServices(client, authParams);
     this.auditService = mgmtServices.getAuditService();
     this.accessKeyService = mgmtServices.getAccessKeyService();
   }
 
   @Test
   void testSearchForSuccess() {
-    var auditRecord = mock(AuditServiceImpl.ActualAuditRecord.class);
-    var auditResponse = new AuditServiceImpl.ActualAuditSearchResponse(List.of(auditRecord));
-    var now = Instant.now();
+    ActualAuditRecord auditRecord = mock(AuditServiceImpl.ActualAuditRecord.class);
+    ActualAuditSearchResponse auditResponse =
+        new AuditServiceImpl.ActualAuditSearchResponse(Arrays.asList(auditRecord));
+    Instant now = Instant.now();
     auditRecord.occurred = String.valueOf(now.toEpochMilli());
-    auditRecord.externalIds = List.of("id1", "id2");
-    var auditSearchRequest = new AuditSearchRequest();
-    var apiProxy = mock(ApiProxy.class);
+    auditRecord.externalIds = Arrays.asList("id1", "id2");
+    AuditSearchRequest auditSearchRequest = new AuditSearchRequest();
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(auditResponse).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      var response = auditService.search(auditSearchRequest);
+      AuditSearchResponse response = auditService.search(auditSearchRequest);
       Assertions.assertThat(response.getAudits().size()).isEqualTo(1);
       Assertions.assertThat(response.getAudits().get(0).getOccurred().toEpochMilli())
           .isEqualTo(now.toEpochMilli());
@@ -90,12 +98,12 @@ public class AuditServiceImplTest {
 
   @RetryingTest(value = 3, suspendForMs = 30000, onExceptions = RateLimitExceededException.class)
   void testFunctionalFullCycle() throws Exception {
-    var createResult = accessKeyService.create(
+    AccessKeyResponse createResult = accessKeyService.create(
         TestUtils.getRandomName("ak-"), 0, null, null);
     accessKeyService.delete(createResult.getKey().getId());
     // Wait for the audit
     Thread.sleep(10000);
-    var searchRes = auditService.search(AuditSearchRequest.builder().noTenants(true).build());
+    AuditSearchResponse searchRes = auditService.search(AuditSearchRequest.builder().noTenants(true).build());
     Assertions.assertThat(searchRes.getAudits()).isNotEmpty();
   }
 }
