@@ -10,16 +10,20 @@ import static org.mockito.Mockito.mockStatic;
 
 import com.descope.exception.RateLimitExceededException;
 import com.descope.exception.ServerCommonException;
+import com.descope.model.client.Client;
 import com.descope.model.flow.Flow;
+import com.descope.model.flow.FlowMetadata;
 import com.descope.model.flow.FlowResponse;
+import com.descope.model.flow.FlowsResponse;
 import com.descope.model.flow.Screen;
 import com.descope.model.flow.Theme;
 import com.descope.model.flow.ThemeResponse;
+import com.descope.model.mgmt.ManagementParams;
 import com.descope.proxy.ApiProxy;
 import com.descope.proxy.impl.ApiProxyBuilder;
 import com.descope.sdk.TestUtils;
 import com.descope.sdk.mgmt.FlowService;
-import java.util.List;
+import java.util.Arrays;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -32,8 +36,8 @@ class FlowServiceImplTest {
 
   @BeforeEach
   void setUp() {
-    var authParams = TestUtils.getManagementParams();
-    var client = TestUtils.getClient();
+    ManagementParams authParams = TestUtils.getManagementParams();
+    Client client = TestUtils.getClient();
     this.flowService = ManagementServiceBuilder.buildServices(client, authParams).getFlowService();
   }
 
@@ -47,53 +51,53 @@ class FlowServiceImplTest {
 
   @Test
   void testExportFlowForSuccess() {
-    var flowResponse = mock(FlowResponse.class);
-    var apiProxy = mock(ApiProxy.class);
+    FlowResponse flowResponse = mock(FlowResponse.class);
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(flowResponse).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      var response = flowService.exportFlow("someFlowID");
+      FlowResponse response = flowService.exportFlow("someFlowID");
       Assertions.assertThat(response).isNotNull();
     }
   }
 
   @Test
   void testImportFlowForEmptyFlowID() {
-    var flow = mock(Flow.class);
-    var screen = mock(Screen.class);
+    Flow flow = mock(Flow.class);
+    Screen screen = mock(Screen.class);
     ServerCommonException thrown =
         assertThrows(
-            ServerCommonException.class, () -> flowService.importFlow("", flow, List.of(screen)));
+            ServerCommonException.class, () -> flowService.importFlow("", flow, Arrays.asList(screen)));
     assertNotNull(thrown);
     assertEquals("The FlowID argument is invalid", thrown.getMessage());
   }
 
   @Test
   void testImportFlowForSuccess() {
-    var flowResponse = mock(FlowResponse.class);
-    var flow = mock(Flow.class);
-    var screen = mock(Screen.class);
-    var apiProxy = mock(ApiProxy.class);
+    FlowResponse flowResponse = mock(FlowResponse.class);
+    Flow flow = mock(Flow.class);
+    Screen screen = mock(Screen.class);
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(flowResponse).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      var response = flowService.importFlow("someFlowID", flow, List.of(screen));
+      FlowResponse response = flowService.importFlow("someFlowID", flow, Arrays.asList(screen));
       Assertions.assertThat(response).isNotNull();
     }
   }
 
   @Test
   void testExportThemeForSuccess() {
-    var theme = mock(Theme.class);
-    var themeResponse = new ThemeResponse(theme);
-    var apiProxy = mock(ApiProxy.class);
+    Theme theme = mock(Theme.class);
+    ThemeResponse themeResponse = new ThemeResponse(theme);
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(themeResponse).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      var response = flowService.exportTheme();
+      Theme response = flowService.exportTheme();
       Assertions.assertThat(response).isNotNull();
     }
   }
@@ -108,34 +112,34 @@ class FlowServiceImplTest {
 
   @Test
   void testImportThemeForSuccess() {
-    var theme = mock(Theme.class);
-    var themeResponse = new ThemeResponse(theme);
-    var apiProxy = mock(ApiProxy.class);
+    Theme theme = mock(Theme.class);
+    ThemeResponse themeResponse = new ThemeResponse(theme);
+    ApiProxy apiProxy = mock(ApiProxy.class);
     doReturn(themeResponse).when(apiProxy).post(any(), any(), any());
     try (MockedStatic<ApiProxyBuilder> mockedApiProxyBuilder = mockStatic(ApiProxyBuilder.class)) {
       mockedApiProxyBuilder.when(
         () -> ApiProxyBuilder.buildProxy(any(), any())).thenReturn(apiProxy);
-      var response = flowService.importTheme(theme);
+      Theme response = flowService.importTheme(theme);
       Assertions.assertThat(response).isNotNull();
     }
   }
 
   @RetryingTest(value = 3, suspendForMs = 30000, onExceptions = RateLimitExceededException.class)
   void testFunctionalFullCycleTheme() throws Exception {
-    var flows = flowService.listFlows();
+    FlowsResponse flows = flowService.listFlows();
     assertNotNull(flows.getFlows());
     Assertions.assertThat(flows.getFlows().size()).isGreaterThan(0);
-    for (var f : flows.getFlows()) {
+    for (FlowMetadata f : flows.getFlows()) {
       Assertions.assertThat(f.getId()).isNotBlank();
     }
     String flowId = "sign-up-or-in";
-    var flowResponse = flowService.exportFlow(flowId);
+    FlowResponse flowResponse = flowService.exportFlow(flowId);
     Assertions.assertThat(flowResponse.getScreens().size()).isGreaterThan(0);
     assertNotNull(flowResponse.getFlow());
     // flowResponse = flowService.importFlow(flowId, flowResponse.getFlow(), flowResponse.getScreens());
     // Assertions.assertThat(flowResponse.getScreens().size()).isGreaterThan(0);
     // assertNotNull(flowResponse.getFlow());
-    var theme = flowService.exportTheme();
+    Theme theme = flowService.exportTheme();
     assertNotNull(theme);
     Assertions.assertThat(theme.getId()).isNotBlank();
     assertNotNull(theme.getCssTemplate());
